Revision history for Test-Ping

0.09
        ported 300_ping_stream.t to t/10-ping_stream.t
        ported 400_ping_syn.t to t/11-ping_syn.t
        ported 410_syn_host.t to t/12-syn_host.t
        ported 450_service.t to t/13-service.t

0.08    28.04.09
        fixed t/03-icmp.t test that prevented installation when admin tests
        added method (and POD for) create_ping_object_ok()
        fixed t/05-udp_tcp_stream_syn_inst.t to use create_ping_object_ok()
        ping_ok() now returns return value and duration like Net::Ping's ping()
        added HIRES support even though I thought I wouldn't
        ported HIRES test from Net::Ping (t/09-ping_hires.t)

0.07    27.04.09
        rewrote t/06-alarm.t
        rewrote Test::Ping::Ties::TIMEOUT, Test::Ping::Ties::TIMEOUT
        added Test::Timer as possible skip for testing of t/06-alarm.t
        added Test::Ping::Ties::PORT
        added t/08-ping_tcp.t
        fixed no. of tests in POD synopsis of Ping.pm
        added a lot to the POD

0.06    26.04.09
        moved t/05-udp_tcp_inst.t to t/05-udp_tcp_stream_syn_inst.t
        adding test for stream inst and syn inst
        added t/06-alarm.t
        added ping_not_ok()

0.05    26.04.09
        some POD changes and subroutine returns to keep up with perlcritic
        added -T to tests
        added 03-icmp.t
        added 04-object.t and _ping_object()
        introducing Tie::Scalar to replace _update_variables()
        added Test::Ping::Ties::PROTO.pm
        removed t/02-variables.t
        updated POD
        removed pos_bug_net_ping.t - it's not a bug

0.04    24.04.09
        added test for possible bug in Net::Ping
        got it stable
        removed BIND and PORT support for now

0.03    22.04.09
        separated variable tests to a different file
        added TIMEOUT, PORT, BIND, SOURCE_VERIFY, SERVICE_CHECK,
            TCP_SERVICE_CHECK

0.02    22.04.09
        ping_ok() now works

0.01    22.04.09
        Basic skeleton
