@@ -5,6 +5,7 @@ Revision history for Test-Ping
         ported 400_ping_syn.t to t/11-ping_syn.t
         ported 410_syn_host.t to t/12-syn_host.t
         ported 450_service.t to t/13-service.t
+        added SERVICE_CHECK
 
 0.08    28.04.09
         fixed t/03-icmp.t test that prevented installation when admin tests
